--- a/donations.html
+++ b/donations.html
@@ -126,9 +126,9 @@
                 </div>
 
                 <div class="form-group">
-                    <label class="form-label">Screening ID (Optional)</label>
-                    <input type="number" name="screening_id" class="form-input" placeholder="Leave empty if no health record">
-                    <small style="color: var(--text-muted);">Enter the donor health screening record ID (optional)</small>
+                    <label class="form-label">Screening ID *</label>
+                    <input type="number" name="screening_id" class="form-input" placeholder="Enter donor health screening ID" required>
+                    <small style="color: var(--text-muted);">Enter the donor health screening record ID</small>
                 </div>
 
                 <div style="display: flex; gap: 1rem; justify-content: flex-end; margin-top: 2rem;">
